# jsonman

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  jsonman.c  jsonman.h
test/: CMakeLists.txt  test.h  test_find_array.c  test_find_boolean.c  test_find_object.c  test_parse1.c  test_parse_array.c  test_parse_boolean.c  test_parse_key_without_quotes.c  test_parse_named_array.c  test_parse_named_object.c  test_parse_number.c  test_parse_string.c
